k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tiktok-toe
  namespace: game-services
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: tiktok-toe
